<resources>
    <string name="app_name">WhatToWatch</string>

    <string name="series_title">Title</string>
    <string name="series_description">Description</string>
    <string name="button_save">Save</string>

    <string name="new_series">New Series</string>
    <string name="new_episode">New Episode</string>

    <string name="edit_series">Edit Series</string>
    <string name="edit_episode">Edit Episode</string>

    <string name="delete_series">Delete Series</string>
    <string name="delete_episode">Delete Episode</string>

    <string name="episode_name">Name</string>
    <string name="episode_season">Season</string>
    <string name="episode_number">Number</string>
    <string name="title_activity_season">Season</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Season%1$d</string>
    <string name="title_activity_list_episodes">ListEpisodes</string>
    <string name="title_activity_list_episodes2">" "</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="space">"  "</string>
    <string name="EDot">Ep.</string>
    <string name="order_alphabetical">Order alphabetically</string>
    <string name="order_rating">Order by rating</string>
    <string name="filter_watched">Filter watched</string>
</resources>
